Remove unnecessary use of `LinkedList` and switch to `ArrayList` for overall efficiency